# Sailer

./: .gitignore  .travis.yml  CMakeLists.txt  DiscordSendWebhook.py  Makefile  README.md  build.bat  build.sh  buildTests.bat  buildTests.sh  install_dependencies.sh  integrationTest.bat  main.cpp
src/: ReturnTypes.h  main.cpp
src/Communicator/: ICommunicator.h  NetworkCommunicator.h
src/FileSystemReceiver/: FileSystem.h  FileSystemChangeDirectory.h  FileSystemExecuteFile.h  FileSystemGet.h  FileSystemIsFileAtGivenDirectory.h  FileSystemListDirectory.h  FileSystemPut.h  FileSystemReceiver.h  IFileSystem.h  WindowsFileSystemReceiver.cpp  WindowsFileSystemReceiver.h  file_system_change_directory.h  file_system_execute_file.h  file_system_is_file_at_current_directory.h  file_system_is_file_at_given_directory.h  file_system_list_directory.h  (+1 more)
test/: CMakeLists.txt  mainTest.cpp
test/src/: mainTest.cpp
test/src/Communicator/: MockCommunicator.cpp  MockCommunicator.h  NetworkCommunicatorTest.cpp
test/src/FileSystemReceiver/: FileSystemReceiverTest.cpp  WindowsFileSystemReceiverTest.cpp
test/src/FileSystemReceiver/FileSystem/: MockWindowsFileSystem.cpp  MockWindowsFileSystem.h  WindowsFileSystemTest.cpp
test/src/FileSystemReceiver/FileSystemTest/: FileSystemTest.cpp
test/src/FileSystemReceiverTest/: FileSystemReceiverTest.cpp  MockFileSystem.cpp  MockFileSystem.h  MockFileSystemReceiver.h  WindowsFileSystemReceiverTest.cpp  file_system_receiver_test.cpp  mock_file_system_receiver.h
test/src/FileSystemReceiverTest/FileSystemTest/: MockFileSystem.h
(+29 files in other folders)
